--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -13,51 +13,20 @@
 *
 */
 @import 'variables';
+@import 'mixins';
+@import 'template';
+
 
 $mdc-typography-font-family: $font-secondary-family;
 $mdc-theme-primary: $brand-color;
-//$mdc-theme-secondary: #feeae6;
-//$mdc-theme-on-primary: #442b2d;
-//$mdc-theme-on-secondary: #442b2d;
 
-// $mdc-typography-styles-headline1: (
-// font-size: 1.8rem,
-// line-height: 1.1rem,
-// font-weight: 500
-// );
-
-// $mdc-typography-styles-headline2: (
-// font-size: 1rem,
-// line-height: 1.1rem,
-// font-weight: 500
-// );
-
-// $mdc-typography-styles-subtitle1: (
-// font-size: 0.9rem,
-// line-height: 1.1rem,
-// font-weight: 400
-// );
-
-// $mdc-typography-styles-subtitle2: (
-// font-size: 0.8rem,
-// line-height: 1.1rem,
-// font-weight: 300
-// );
-
-// $mdc-typography-styles-body2: (
-// font-family: Roboto,
-// font-size: 0.775rem,
-// line-height: 1.25rem,
-// font-weight: 100
-// );
-
-@import "@material/typography/mdc-typography";
+// @import "@material/typography/mdc-typography";
 @import "@material/card/mdc-card";
 @import "@material/button/mdc-button";
 @import "@material/layout-grid/mdc-layout-grid";
 @import "@material/top-app-bar/mdc-top-app-bar";
 @import "@material/icon-button/mdc-icon-button";
-@import "@material/drawer/mdc-drawer";
+// @import "@material/drawer/mdc-drawer";
 @import "@material/textfield/mdc-text-field";
 @import "@material/select/mdc-select";
 @import "@material/form-field/mdc-form-field";
@@ -67,7 +36,7 @@ $mdc-theme-primary: $brand-color;
 @import "@material/menu/mdc-menu";
 @import "@material/chips/mdc-chips";
 @import "@material/fab/mdc-fab";
-@import "@material/elevation/mdc-elevation";
+// @import "@material/elevation/mdc-elevation";
 @import "@material/snackbar/mdc-snackbar";
 @import "@material/dialog/mdc-dialog";
 @import "@material/switch/mdc-switch";
@@ -87,7 +56,7 @@ body {
   background: $background-color;
   color: $font-secondary-color;
 
-  @include mdc-layout-grid-media-query_("phone") {
+  @include mobile-only {
     background: $background-secondary-color;
     user-select: none;
     -webkit-tap-highlight-color: transparent;
@@ -118,7 +87,7 @@ a {
 .turbolinks-progress-bar {
   height: 5px;
   background-color: $brand-color;
-  @include mdc-layout-grid-media-query_("phone") {
+  @include mobile-only {
     height: 3px;
     top: 0px;
   }
