--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -1,6 +1,6 @@
 @import "@material/fab/_mixins";
 @import '@material/icon-button/_mixins';
-@import "../_variables";
+
 
 $name-color: $font-primary-color;
 $description-color: $font-secondary-color;
@@ -18,7 +18,7 @@ $description-color: $font-secondary-color;
     margin:6px 0 0 0;
     position: relative;
     @include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       min-height: 165px;
     }
     &:hover {
@@ -49,7 +49,7 @@ $description-color: $font-secondary-color;
     box-shadow: none;
     background-color: inherit;
     @include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       min-height: 100px;
     }
 
@@ -101,7 +101,7 @@ $description-color: $font-secondary-color;
       z-index: 1;
       border-radius: 100%;
       fill: $font-secondary-color;
-      @include mdc-layout-grid-media-query_("phone") {
+      @include mobile-only {
         display: block;
         padding: 3px;
       }
@@ -195,7 +195,7 @@ $description-color: $font-secondary-color;
       display: flex;
       margin: 50px 0;
       position: relative;
-      @include mdc-layout-grid-media-query_("phone") {
+      @include mobile-only {
         flex-direction: column;
         margin: 24px 0;
       }
@@ -308,7 +308,7 @@ $description-color: $font-secondary-color;
     opacity: 0;
     transition: opacity 0.15s ease;
     user-select: none;
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       opacity: 1;
     }
     .me-card--single & {
@@ -328,7 +328,7 @@ $description-color: $font-secondary-color;
     transition: opacity 0.15s ease;
     user-select: none;
     z-index: 2;
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       margin: 12px 0;
       opacity: 1;
     }
@@ -359,7 +359,7 @@ $description-color: $font-secondary-color;
     //  animation-duration: 1s;
     //  animation-timing-function: ease;
     //  padding: 0;
-    //  @include mdc-layout-grid-media-query_("phone") {
+    //  @include mobile-only {
     //    //padding: 1px 0 1px 0;
     //  }
     //}
@@ -393,7 +393,7 @@ $description-color: $font-secondary-color;
     animation-duration: 1s;
     animation-timing-function: ease;
     padding: 0;
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
 
     }
 
@@ -423,7 +423,7 @@ $description-color: $font-secondary-color;
         fill: lighten($font-tertiary-color, 30%);
       }
 
-      @include mdc-layout-grid-media-query_("phone") {
+      @include mobile-only {
         display: block;
       }
 
@@ -447,7 +447,7 @@ $description-color: $font-secondary-color;
 
     //@include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
     //
-    //@include mdc-layout-grid-media-query_("phone") {
+    //@include mobile-only {
     //  min-height: 165px;
     //}
 
@@ -479,7 +479,7 @@ $description-color: $font-secondary-color;
     //  font-family: Roboto;
     //  font-weight: 500;
     //
-    //  @include mdc-layout-grid-media-query_("phone") {
+    //  @include mobile-only {
     //    margin: 6px 0 0 0;
     //    color: $font-secondary-color;
     //  }
@@ -521,7 +521,7 @@ $description-color: $font-secondary-color;
     //padding: 35px 0;
     //font-size: 16px;
     //line-height: 1.4em;
-    //@include mdc-layout-grid-media-query_("phone") {
+    //@include mobile-only {
     //  padding: 0;
     //}
     //
@@ -584,7 +584,7 @@ $description-color: $font-secondary-color;
     //  justify-content: center;
     //  align-content: baseline;
     //  position: relative;
-    //  @include mdc-layout-grid-media-query_("phone") {
+    //  @include mobile-only {
     //    height: auto;
     //    align-content: center;
     //    justify-content: center;
@@ -603,7 +603,7 @@ $description-color: $font-secondary-color;
     //  border-radius: $media-border-radius;
     //  position: relative;
     //  box-shadow: $media-box-shadow-large;
-    //  @include mdc-layout-grid-media-query_("phone") {
+    //  @include mobile-only {
     //    width: 100%;
     //    height: 200px;
     //    border-radius: 0;
@@ -621,7 +621,7 @@ $description-color: $font-secondary-color;
     //  font-weight: 800;
     //  font-size: 28px;
     //  color: $font-primary-color;
-    //  @include mdc-layout-grid-media-query_("phone") {
+    //  @include mobile-only {
     //    font-size: 21px;
     //    width: 90%;
     //    text-align: center;
@@ -652,7 +652,7 @@ $description-color: $font-secondary-color;
     //  //text-transform: none;
     //  //display: flex;
     //  //margin: 50px 0;
-    //  //@include mdc-layout-grid-media-query_("phone") {
+    //  //@include mobile-only {
     //  //  flex-direction: column;
     //  //  margin: 24px 0;
     //  //}
@@ -664,7 +664,7 @@ $description-color: $font-secondary-color;
     //  margin: 0 15px 0 0;
     //  border-radius: 5px;
     //  width: 50%;
-    //  @include mdc-layout-grid-media-query_("phone") {
+    //  @include mobile-only {
     //    width: auto;
     //    margin: 0 0 16px 0;
     //    display: flex;
@@ -764,7 +764,7 @@ $description-color: $font-secondary-color;
     justify-content: center;
     text-align: center;
     margin: auto;
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       border: unset;
       min-height: 15vh;
       justify-content: center;
@@ -787,7 +787,7 @@ $description-color: $font-secondary-color;
       position: absolute;
       bottom: 0;
       font-size: 16px;
-      @include mdc-layout-grid-media-query_("phone") {
+      @include mobile-only {
         font-size: 14px;
         border: unset;
       }
@@ -796,7 +796,7 @@ $description-color: $font-secondary-color;
     & .me-card__secondary-section {
       color: $font-tertiary-color;
       font-size: 14px;
-      @include mdc-layout-grid-media-query_("phone") {
+      @include mobile-only {
         font-size: 11px;
         font-weight: 100;
       }
