--- a/web/app/assets/stylesheets/components/me-event-single.scss
+++ b/web/app/assets/stylesheets/components/me-event-single.scss
@@ -1,4 +1,4 @@
-@import "variables";
+
 
 @mixin is-clickable {
   background: $border-color;
@@ -19,7 +19,7 @@
 .me-event-single {
   font-size: 16px;
   line-height: 1.4em;
-  @include mdc-layout-grid-media-query_("phone") {
+  @include mobile-only {
     padding: 0;
   }
 
@@ -90,7 +90,7 @@
     background-size: cover;
     background-position: center;
     position: relative;
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       width: 100%;
       height: 200px;
       border-radius: 0;
@@ -108,7 +108,7 @@
     color: $font-primary-color;
     margin: 0;
     @include with-divider;
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       font-size: 21px;
       text-align: center;
     }
@@ -151,7 +151,7 @@
         fill: lighten($font-tertiary-color, 30%);
       }
 
-      @include mdc-layout-grid-media-query_("phone") {
+      @include mobile-only {
         display: block;
       }
 
@@ -282,12 +282,12 @@
       }
     }
 
-    // @include mdc-layout-grid-media-query_("phone") {
+    // @include mobile-only {
     //   margin-top: 60px;
     // }
 
     & .mdc-layout-grid__inner {
-      @include mdc-layout-grid-media-query_("phone") {
+      @include mobile-only {
         grid-template-columns: repeat(4, minmax(0, 1fr));
       }
     }
