--- a/web/app/assets/stylesheets/components/me-follow-chip-set.scss
+++ b/web/app/assets/stylesheets/components/me-follow-chip-set.scss
@@ -1,4 +1,3 @@
-@import 'variables';
 
 .me-follow-chip-set {
   user-select: none;
@@ -7,14 +6,14 @@
     margin: 0 0 0 12px;
   }
 
-  @include mdc-layout-grid-media-query_("phone") {
+  @include mobile-only {
     @include add-horizontal-scroll-items;
   }
 
   & .mdc-chip {
     background: $surface-color;
     border: $chip-border-size solid $border-color;
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       height: 36px;
       border-radius: 22px;
     }
