--- a/web/app/assets/stylesheets/components/me-form.scss
+++ b/web/app/assets/stylesheets/components/me-form.scss
@@ -1,10 +1,9 @@
-@import "@material/layout-grid/mdc-layout-grid";
 
 .me-form {
   --mdc-layout-grid-gutter-phone: 12px 16px;
   --mdc-layout-grid-gutter-desktop: 12px 30px;
 
-  @include mdc-layout-grid-media-query_("phone") {
+  @include mobile-only {
     .me-page--justify-center & {
       width: calc(100vw - 48px);
     }
