--- a/web/app/assets/stylesheets/components/me-movie.scss
+++ b/web/app/assets/stylesheets/components/me-movie.scss
@@ -58,7 +58,7 @@
       font-weight: 800;
       font-size: 28px;
       color: $font-primary-color;
-      @include mdc-layout-grid-media-query_("phone") {
+      @include mobile-only {
         font-size: 21px;
         text-align: center;
         margin: 15px 0 24px 0;
