--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -1,9 +1,9 @@
-@import "variables";
+
 
 .me-page {
   color: $font-primary-color;
   @include is-show-in-animated;
-  @include mdc-layout-grid-media-query_("phone") {
+  @include mobile-only {
     max-width: 100vw;
     overflow: hidden;
   }
@@ -12,12 +12,12 @@
   &__section {
     padding: 24px 0;
     // background: $background-z1-color;
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       padding: 6px 0;
     }
 
     &:last-child {
-      @include mdc-layout-grid-media-query_("phone") {
+      @include mobile-only {
         border-bottom: none;
       }
     }
@@ -37,7 +37,7 @@
     justify-content: center;
     align-items: center;
     min-height: 60vh;
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       padding: 0 24px;
     }
   }
@@ -52,7 +52,7 @@
     padding: 24px 0 0 0;
     min-height: 45vh;
     // @include is-open-up-animated;
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       padding: 0 0 0 0;
     }
 
@@ -60,7 +60,7 @@
       padding: 0;
     }
 
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       & .mdc-layout-grid {
         //padding: 0 24px;
       }
@@ -85,7 +85,7 @@
     margin: auto;
     // padding-top: 35px;
 
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       // padding-top: 45px;
     }
   }
@@ -94,7 +94,7 @@
     max-width: 700px;
     margin: auto;
     @include is-open-up-animated;
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       //padding: 24px;
     }
   }
@@ -103,7 +103,7 @@
     max-width: 700px;
     margin: 24px auto;
     @include is-open-up-animated;
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       //padding: 24px;
     }
   }
@@ -112,7 +112,7 @@
     padding: 24px 0 0 0;
     min-height: 45vh;
     @include is-open-up-animated;
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       padding: 0 0 0 0;
     }
 
@@ -120,7 +120,7 @@
       padding: 0;
     }
 
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       //& .mdc-layout-grid {
       //  padding: 0 24px;
       //}
