--- a/web/app/assets/stylesheets/components/me-search-field.scss
+++ b/web/app/assets/stylesheets/components/me-search-field.scss
@@ -1,4 +1,4 @@
-@import "../_variables";
+
 @import "@material/textfield/_mixins";
 
 $icon-color: #616161;
@@ -13,7 +13,7 @@ $field-height: 44px;
   transition: height 0.2s linear;
   padding: 0 12px;
   margin: auto;
-  @include mdc-layout-grid-media-query_("phone") {
+  @include mobile-only {
     border-radius: 10px;
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
     [data-controller="search"] & {
@@ -48,7 +48,7 @@ $field-height: 44px;
     transition: border 0.1s ease-out;
     border-bottom-color: transparent !important;
     align-self: baseline;
-    @include mdc-layout-grid-media-query_("phone") {
+    @include mobile-only {
       padding: 0 12px;
       font-size: 13px;
       font-weight: 400;
