--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -75,7 +75,7 @@
 
     & .me-card__like-button {
       //bottom: -16px;
-      right: 4px;
+      // right: 4px;
 
       & .me-icon-button.mdc-icon-button {
         @include mdc-icon-button-icon-size($width: 16px, $height: 16px, $padding: 8px);
