--- a/web/app/assets/stylesheets/welcome/fcp.scss
+++ b/web/app/assets/stylesheets/welcome/fcp.scss
@@ -1,3 +1,7 @@
+@import '../_variables';
+@import '../_mixins';
+@import '../_template';
+
 @import "@material/layout-grid/mdc-layout-grid";
 @import "@material/textfield/mdc-text-field";
 @import "@material/button/mdc-button";
