--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -190,7 +190,7 @@
             Sim, o Alegreme é um projeto local com grandes ambições mas está começando somente por Porto Alegre. Queremos experimentar e testar muitas coisas para criar um negócio inovador com foco nos usuários, ou seja, queremos fazer algo diferente e bem feito aqui na nossa cidade. Se funcionar e fizer sentido podemos espalhar pelo Brasil.
           </div>
         </div>
-        <div class="about__item" style="grid-area: r3">
+        <!-- <div class="about__item" style="grid-area: r3">
           <h3 class="h3">
             Quem faz?
           </h3>
@@ -198,8 +198,8 @@
             A pessoa que está desenvolvendo tudo, por enquanto, sou eu,
             <a href="https://www.instagram.com/jonataseduardo/">@jonastaseduardo</a>, mais conhecido como Jon. Tenho esse desejo de fazer algo parecido desde 2013, quando comecei a estudar de tudo um pouco. 6 anos atrás ainda estava começando minha jornada no desenvolvimento de produtos. Hoje com tecnologias como inteligência artificial mais acessíveis e com seis anos a mais de aprendizado, chegou a hora de conectar os pontos e ver se o projeto acontece.
           </div>
-        </div>
-        <div class="about__item" style="grid-area: r4">
+        </div> -->
+        <div class="about__item" style="grid-area: r3">
           <h3 class="h3">
             Como enviar algo?
           </h3>
@@ -207,14 +207,14 @@
             Se o seu evento ou experiência está na internet em sites que tratam sobre Porto Alegre provavelmtente ele está no Alegreme, pois o aplicativo funciona semelhante ao Google, buscando tudo que há de eventos e experiências em sites de Porto Alegre. O algorítimo cria, edita, categoriza, escolhe para quem exibir... Praticamente faz tudo sozinho.
           </div>
         </div>
-        <div class="about__item" style="grid-area: r5">
+        <!-- <div class="about__item" style="grid-area: r4">
           <h3 class="h3">
             Que tecnologia vocês usam?
           </h3>
           <div class="about__content">
             As liguagens são muitas, vão de Ruby a Python; de Javascript a Java. São 6 serviços que rodam de forma isolada. Alguns responsáveis por catar dados da internet como o Google, outros em classificar estes dados, como o Pinterest e outro em aprender sobre os dados e usuários, como o Netflix. Para ser ágil no desenvolvimento, na versão mobile estamos usando PWA. E tudo tendo como core inteligência artificial, como você deve ter imaginado :)
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
   </div>
@@ -227,21 +227,20 @@
       class="footer__image lazyload"/>
 
     <div class="social__links">
-      <a href="https://www.instagram.com/portoalegreme">instagram</a> ·
-      <a href="https://twitter.com/portoalegreme">twitter</a> ·
+      <!-- <a href="https://www.instagram.com/portoalegreme">instagram</a> · -->
+      <!-- <a href="https://twitter.com/portoalegreme">twitter</a> · -->
       <a href="#">oi@alegreme.com</a>
     </div>
     <div class="credits">
-      Feito por
-      <a href="https://www.instagram.com/jonataseduardo/">@jonataseduardo</a> com
+      Feito com
       <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M11.7054 0.257324C10.0657 0.257324 8.63837 1.23748 7.99993 2.65639C7.36149 1.23889 5.93415 0.257324 4.29446 0.257324C2.05571 0.257324 0.234619 2.07982 0.234619 4.31857C0.234619 9.36701 7.51759 13.5239 7.82837 13.6983C7.88181 13.7278 7.93946 13.7433 7.99853 13.7433C8.05759 13.7433 8.11665 13.7278 8.16868 13.6983C8.47806 13.5239 15.7638 9.36701 15.7638 4.31857C15.7652 2.07982 13.9442 0.257324 11.7054 0.257324Z" fill="#DB4437"/>
       </svg>
       ️no Centro Histórico de Porto Alegre
     </div>
-    <div class="vamodale">
+    <!-- <div class="vamodale">
       Ei! Tem ideias de funcionalidades, projetos pra tocar junto, quer conectar uma API, trocar uma ideia... Usa os links acima. Vlw flw
-    </div>
+    </div> -->
     <div class="footer__links">
       <a href="http://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" rel="noreferrer" target="_blank">
         Manifesto
