--- a/web/app/assets/stylesheets/components/me-section.scss
+++ b/web/app/assets/stylesheets/components/me-section.scss
@@ -68,11 +68,16 @@
     align-items: center;
     justify-content: space-between;
     @include mobile-only {
-      font-size: 18px;
+      font-size: 16px;
       font-weight: 800;
       line-height: 1em;
-      padding: 3px $section-padding-phone 0;
+      padding: 0 12px 0 $section-padding-phone;
       justify-content: space-between;
+    }
+    [data-controller="movies"][data-action="index"] & {
+      @include mobile-only {
+        padding: 0;
+      }
     }
   }
 
