--- a/web/app/assets/stylesheets/components/me-button.scss
+++ b/web/app/assets/stylesheets/components/me-button.scss
@@ -55,10 +55,17 @@ $box-shadow: 0 0 45px rgba(0, 0, 0, 0.20);
   }
 
   .me-top-app-bar & {
+    font-size: 12px;
+    color: $font-secondary-color;
+    border: 1px solid $font-secondary-color;
+    padding: 3px 6px;
+    &:hover {
+      color: $brand-color;
+      border: 1px solid $brand-color;
+    }
+
     @include mobile-only {
-      font-size: 12px;
-      line-height: 1.1em;
-      padding: 12px 8px;
+      padding: 3px 8px;
     }
   }
 }
