--- a/web/app/assets/stylesheets/components/me-tab-bar.scss
+++ b/web/app/assets/stylesheets/components/me-tab-bar.scss
@@ -4,8 +4,6 @@
 @import "@material/tab/mdc-tab";
 
 .me-tab-bar {
-  // border-bottom: 5px solid $surface-tertiary-color;
-  //margin: 0 0 6px 0;
   @include mdc-tab-bar-density(-3);
   background: $surface-color;
   display: block;
@@ -13,15 +11,13 @@
   position: sticky;
   top: 0;
   z-index: 5;
-  // border-bottom: 1px solid $background-color;
   @include desktop-only {
     z-index: 2;
     padding: 0 0 0 73px;
   }
   @include mobile-only {
     @include mdc-tab-bar-density(-1);
-    // display: none;
-    //border-bottom: 6px solid $background-color;
+    box-shadow: 0 0 3px #00000030;
   }
 
   & .mdc-tab {
